History: Fix z-index of image

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html {
     --z-header: 0;
     --z-image-preview: 8;
     --z-aside: 4;
+    --z-history-image: 5;
 }
 
 /*/ body /*/
@@ -381,17 +382,18 @@ nav[data-is-visible=true] {
     content: attr(data-word);
 }
 
-.footer-image {
+.history-image {
     --timing: 500ms;
-    --footer-image-max-size: 200px;
+    --history-image-max-size: 200px;
     position: absolute;
     mix-blend-mode: var(--aside-thumbnail-mix-blend-mode);
     filter: var(--aside-thumbnail-filter);
-    max-height: var(--footer-image-max-size);
-    max-width: var(--footer-image-max-size);
+    max-height: var(--history-image-max-size);
+    max-width: var(--history-image-max-size);
     transform-origin: center;
+    z-index: var(--z-history-image);
     /* FIXME: Animating transform will prevent the animation of mix-blend-mode. */
-    transition: all var(--timing) ease-in-out;
+    transition: all var(--timing) ease-in-out, z-index 0s linear;
 }
 
 /************************/
